--- a/mobile.css
+++ b/mobile.css
@@ -13,6 +13,27 @@
   --font-weight-bold: 700;
 }
 
+.montserrat {
+  font-family: var(--font-primary);
+  font-weight: var(--font-weight-regular);
+}
+.montserrat-bold {
+  font-family: var(--font-primary);
+  font-weight: var(--font-weight-bold);
+}
+
+.fraunces {
+  font-family: var(--font-secondary);
+  font-weight: var(--font-weight-regular);
+}
+
+.fraunces-bold {
+  font-family: var(--font-secondary);
+  font-weight: var(--font-weight-bold);
+}
+
+/* Global styles */
+
 * {
   box-sizing: border-box;
   font-family: "Montserrat", sans-serif;
@@ -34,7 +55,6 @@ body {
 img {
   max-inline-size: 100%;
   block-size: auto;
-  object-fit: contain;
 }
 
 body {
@@ -50,37 +70,37 @@ body {
   flex-direction: column;
   background-color: var(--white);
   border-radius: 0.625rem;
-  width: 90vw;
-  min-width: 300px;
 }
-
+.product-card__image  img {
+  border-radius: 0.625rem 0.625rem 0 0;}
 .product-card__image {
   border-radius: 0.625rem 0.625rem 0 0;
-  width: 100%;
-  align-self: start;
+  min-width: 300px;
   display: block;
   object-fit: cover;
 }
 
 .product-card__info {
+  height: 60vh;
+  width: 100%;
   display: flex;
   flex-direction: column;
+  justify-content: space-around;
   border-radius: 0.625rem;
   padding: 1.5rem;
-  gap: 0.5rem;
+  
 }
 
 h1 {
-  font-size: 0.725rem;
+  font-size: 0.825rem;
   color: var(--grey);
-  font-weight: var(--font-weight-regular);
   text-transform: uppercase;
+  margin-bottom: 1rem;
+  letter-spacing: 0.2rem;
 }
 
 h2 {
-  font-family: var(--font-secondary);
   font-size: 1.5rem;
-  font-weight: var(--font-weight-bold);
   text-transform: capitalize;
   color: var(--black);
 }
@@ -95,40 +115,33 @@ p {
   flex-direction: row;
   align-items: center;
   gap: 1.3rem;
-  font-family: var(--font-secondary);
   font-size: 1.2rem;
-  font-weight: var(--font-weight-regular);
 }
 
 .product-card__price--discounted {
-  font-family: var(--font-secondary);
-  font-weight: var(--font-weight-bold);
   color: var(--green-500);
 }
 
 .product-card__price--original {
-  font-family: var(--font-secondary);
   font-size: 0.7rem;
-  font-weight: var(--font-weight-regular);
   text-decoration: line-through;
   color: var(--grey);
 }
 
 .product-card__button img {
-  width: 1.1rem;
   margin-right: 0.5vw;
 }
 
 .product-card__button {
   display: flex;
-  align-items: center;
+  flex-direction: row;
   justify-content: center;
+  align-items: center;
+  gap: 0.5rem;
+  padding: 0.5rem 1rem;
   background-color: var(--green-500);
   color: var(--white);
-  font-size: 1.1rem; /* Adjust as needed */
-  font-family: var(--font-primary);
-  font-weight: var(--font-weight-regular);
-  padding: 0.5vw 1.5vw;
+  font-size: 1.1rem; 
   border-radius: 0.625vw;
   border: none;
   cursor: pointer;
