--- a/desktop.css
+++ b/desktop.css
@@ -1,7 +1,7 @@
 @media screen and (min-width: 1440px) {
   .product-card {
     flex-direction: row;
-    width: 40git%;
+    width: 40%;
   }
 
   .product-card__image {
